# eam-core

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  AUTHORS  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  README.rst  from_ymal.json  junit-py36.xml  junit-py37.xml  junit-py38.xml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: change-template.md
docs/: analysis_config.md  api.rst  conf.py  framework.rst  id_parsing.rst  index.rst  installation.rst  internal_data.md  logging.rst  modelling_guidance.md  modules.rst  ngmodel.config.rst  ngmodel.dsl.rst  ngmodel.rst  usage.rst  yaml_syntax.md
docs/ipynb/: JamesCountrifiedTotals.ipynb  JamesPandasTesting.ipynb  JamesSeriesOperationsAnalysis.ipynb  growth_distributions - normal.ipynb  growth_distributions - triangular.ipynb  linear interpolation.ipynb  load_data.ipynb  pint_pandas-Copy1.ipynb  pint_pandas.ipynb  quantity_pandas_sandbox.ipynb  sensi_analysis.ipynb  three-dimensional dfs.ipynb  yaml_runner_nb.ipynb
docs/ipynb/pickle_data/: CDN.pickle  Cellular.pickle  Datacentres.pickle  Modem Router.pickle  carbon_countrytest.hdf5  pint_conversions.ipynb  result_data_carbon.hdf5  result_data_carbon_broken.hdf5  result_data_energy.hdf5  result_data_energy_broken.hdf5  result_data_full_carbon.pkl  result_data_full_energy.pkl
docs/models/: example_model_data.xlsx  sandbox.yml
docs/reference/: eam_core.rst  index.rst
etc/: Dockerfile  build_docker.sh
src/eam_core/: ModuleParser.py  SimulationRunner.py  YamlLoader.py  __main__.py  analysis.py  cli.py  common_analysis.py  common_graphical_analysis.py  core.py  dataframe_result_utils.py  gdrive_data_helper.py  graphical_analysis.py  log_configuration.py  logconf.yml  transform_model.py  ui_description.py  unit_definitions.txt  util.py  validate_model.py  yaml_runner.py
src/eam_core/config/: __init__.py
src/eam_core/dsl/: .gitignore  Mu.g4  MuLexer.py  MuListener.py  MuParser.py  MuVisitor.py  (+3 more)
tests/: SandboxTests.py  context.py  directory_test_controller.py  test_core.py  test_credentials.py  test_data_source.py  test_dsl_model.py  test_dsl_static_analyser.py  test_eam_core.py  test_grouping.py  test_hdf.py  test_id.py  test_models.py  test_module_parser.py  test_mu_dsl.py  test_overview_06.07.21.txt  test_pandas_operations.py  test_process_ids.py  test_serialise.py  test_unit.py  test_validate_model.py  test_yaml_loader.py  test_yaml_serialise.py  working_tests.py
tests/data/: ci_v2_data.csv  ci_v2_data.xlsx  ci_v2_data_exp.xlsx  ci_v2_data_group.xlsx  ci_v2_data_linear.xlsx  countries_data.xlsx  example_models.xlsx  full_countries.xlsx  full_country_data.xlsx  no_country_data.xlsx  some_country_data.xlsx  test_data.xlsx  traces.pdpkl  valid_data_group.xlsx  viewer_seconds_per_month.pdpkl  yaml_loader_test_data.xlsx  youtube_model_params.xlsx
tests/models/: ci_v2.yml  ci_v2_exp.yml  ci_v2_group.yml  ci_v2_linear.yml  ci_v2copy.yml  countriestest.yml  duplicate_ids.yml  existing_ids.yml  existing_ids_copy.yml  no_existing_ids.yml  no_existing_ids_copy.yml  some_existing_ids.yml  some_existing_ids_copy.yml  structure_test.yml  undefined_var_model.yml  valid.yml  valid_group.yml  youtube.yml
(+19 files in other folders)
