[metadata]
name=eam-core
author=Daniel Schien
author_email=daniel.schien@bristol.ac.uk
url=http://www.bristol.ac.uk
license=LICENSE
include_package_data=True

[files]
packages=
    ngmodel

data_files =
    ngmodel/ngmodel = ngmodel/logconf.yml

[options]
install_requires =
    scipy
    xlrd
    pandas==0.24.2
    numpy
    python-dateutil

;[options.extras_require]
;numpy = numpy >= 1.14
;uncertainties = uncertainties >= 3.0
;test = pytest; pytest-mpl; pytest-cov

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = .tox,ci/templates

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = eam_core
default_section = THIRDPARTY
forced_separate = test_eam_core
not_skip = __init__.py
skip = .tox,ci/templates
