[metadata]
name = eam-core
author = Daniel Schien
author_email = dschien@gmail.com
url = http://www.bristol.ac.uk
license = LICENSE
include_package_data = True

;[files]
;packages =
;    eam_core

;data_files =
;    eam_core = eam_core/logconf.yml

[options]
install_requires =
    antlr4-python3-runtime==4.7.1
    eam-data-tools
    graphviz==0.8
    matplotlib>=2.0.2
    networkx==1.11
    numpy
    openpyxl
    pandas==0.24.2
    Pint-Pandas
    pydotplus==2.0.2
    pypandoc>=1.4

    python-dateutil
    PyYAML
    ruamel.yaml
    scipy
    simplejson
    tables>=3.4.4
    tabulate>=0.7.7
    tzlocal


[options.extras_require]
;units = pint, pint-pandas
;numpy = numpy >= 1.14
;uncertainties = uncertainties >= 3.0
;test = pytest; pytest-mpl; pytest-cov
;gdrive = httplib2; google-api-python-client; oauth2client

[bdist_wheel]
universal = 1


;Running `python setup.py sdist` will create a development package with .dev and the current date appended: flaskr-1.0.dev20160314.tar.gz.

;Running `python setup.py release sdist` will create a release package with only the version: flaskr-1.0.tar.gz.
[egg_info]
tag_build = .dev
tag_date = 1

[aliases]
release = egg_info -RDb ''

[flake8]
max-line-length = 140
exclude = .tox,ci/templates

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = eam_core
default_section = THIRDPARTY
forced_separate = test_eam_core
not_skip = __init__.py
skip = .tox,ci/templates
